@@ -1,3 +1,13 @@
+2015-04-28  Csaba Osztrogonác  <ossy@webkit.org>
+
+        Remove WinCE cruft from cmake build system
+        https://bugs.webkit.org/show_bug.cgi?id=144325
+
+        Reviewed by Gyuyoung Kim.
+
+        * CMakeLists.txt:
+        * create_jit_stubs: Removed.
+
 2015-04-27  Andreas Kling  <akling@apple.com>
 
         RegExp matches arrays should use contiguous indexing.
